<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/calculadora_de_areas"
        android:textAlignment="center"
        android:textColor="@color/teal_700"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="162dp">

    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/lado_1">

        </TextView>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:hint="@string/Ingrese_el_valor_lado_1"
            android:textSize="15sp"
            android:id="@+id/lado1">

        </EditText>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/lado_2">

        </TextView>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:hint="@string/Ingrese_el_valor_lado_2"
            android:textSize="15sp"
            android:id="@+id/lado2">

        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/lado_3">

        </TextView>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:hint="@string/Ingrese_el_valor_lado_3"
            android:textSize="15sp"
            android:id="@+id/lado3">

        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:onClick="isCheckedTriangulo"
            android:text="@string/Triangulo"
            android:id="@+id/triangulo">

        </RadioButton>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:onClick="isCheckedCuadrado"
            android:text="@string/Cuadraro"
            android:id="@+id/cuadrado">

        </RadioButton>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/teal_700"
            android:textSize="17sp"
            android:textAlignment="textStart"
            android:text="@string/Resultado"
            android:id="@+id/resultado">

        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/teal_700"
            android:textSize="17sp"
            android:textAlignment="textStart"
            android:hint="@string/Nada">
        </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Calcular"
            android:id="@+id/calcular"
            android:onClick="calcular">

        </Button>

    </LinearLayout>


</LinearLayout>



